--- a/contain.html
+++ b/contain.html
@@ -15,7 +15,7 @@
         <div class="container border border-danger rounded mt-1 mb-1">
             <div class="row text-left text-danger justify-content-center mt-5 ">
                 <div class="col-5">
-                    <img src="/img/ribbon1.png" class="rounded mx-auto d-block" alt="ribbon">
+                    <img src="ribbon1.png" class="rounded mx-auto d-block" alt="ribbon">
                 </div>
             </div>   
 
