--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-5">
-                    <a href="contain.html" type="button" class="btn btn-danger tombol">Read Me :)</a>
+                    <a href="contain.html" type="button" class="btn btn-danger tombol">Click Me :)</a>
                 </div>
             </div>  
         </div>
