--- a/contain.html
+++ b/contain.html
@@ -42,7 +42,8 @@
                     <p>Maka dari itu, izinkanlah aku bisa mengisi hari harimu kembali, izinkan aku untuk berubah menjadi lebih baik lagi bersama dirimu.. <br>
                         Pandu aku, tuntun aku, aku janji bisa memberikan yang terbaik bagi dirimu. <br>
                         Izinkan aku menjadi support dan teman hidupmu, aku kangen dengan waktu yang kita habiskan bersama, kamu bawel, kamu senyum, kamu marah, aku butuh semua itu. <br>
-                        Aku mengharapkan diwarnai oleh dirimu seorang.
+                        Aku mengharapkan diwarnai oleh dirimu seorang, <br>
+                        Kembali padaku seperti dulu.. aku dan kamu ditakdirkan satu, kuyakin cintamu~~ masih... ada~ (Ada - Lyodra)
                     </p>
 
                     <p>If u know, kejadian ini membuatku tertampar, banyak pelajaran yang bisa aku ambil. <br>
@@ -57,10 +58,12 @@
                         Aku ingin membuatmu senyum dan ketawa lagi. <br>
                         Melakukan hal bersama, dan hal baru. <br>
                         Hunting makanan lagi. <br>
+                        Jualan kue lagi, open order lagi.. <br>
                         Jadi aku harap tolong berikan aku kesempatan untuk melakukan itu semua. <br>
                     </p>
 
-                    <p>Aku sangat sangat berterima kasih, karena sudah menemaniku sampai di titik ini. <br>
+                    <p>Sebentar lagi, aku sudah pindah kantor, kita sudah ga satu tempat,<br>
+                    Aku sangat sangat berterima kasih, karena sudah menemaniku sampai di titik ini. <br>
                     Ayo lanjutkan perjuangan ini bersama, <br>
                     Kita gapai keinginan kita, <br>
                     Kita jemput do'a do'a kita.</p>
