--- a/contain.html
+++ b/contain.html
@@ -63,7 +63,7 @@
                     </p>
 
                     <p>Sebentar lagi, aku sudah pindah kantor, kita sudah ga satu tempat,<br>
-                    Aku akan menjalani dan berjuang dengan karir yang bau <br>
+                    Aku akan menjalani dan berjuang dengan karir yang baru,<br>
                     Aku sangat sangat berterima kasih, karena sudah menemaniku sampai di titik ini. <br>
                     Ayo lanjutkan perjuangan ini bersama, <br>
                     Kita gapai keinginan kita, <br>
