--- a/contain.html
+++ b/contain.html
@@ -58,8 +58,11 @@
                         Aku ingin membuatmu senyum dan ketawa lagi. <br>
                         Melakukan hal bersama, dan hal baru. <br>
                         Hunting makanan lagi. <br>
+                        Dibangunin kamu, diperhatiin kamu.. <br>
                         Jualan kue lagi, open order lagi.. <br>
-                        Jadi aku harap tolong berikan aku kesempatan untuk melakukan itu semua. <br>
+                        Aku masih mau jadi tempat kamu cerita dan keluh kesah <br>
+                        Akkh aku kangen semua ituuuuu <br>
+                        Jadi aku harap berikan aku kesempatan untuk melakukan itu semua. <br>
                     </p>
 
                     <p>Sebentar lagi, aku sudah pindah kantor, kita sudah ga satu tempat,<br>
