--- a/contain.html
+++ b/contain.html
@@ -30,7 +30,8 @@
                     <p>Aku memohon maaf atas segala sikap ku selama ini, aku sadar jika aku egois, jahat, sering ga nurut dan segala sesuatu yang membuat mu jengkel. <br>
                         Ketika kamu sakit aku tidak bisa mengisi harimu, pun di saat kamu sehat aku juga tidak mengisi harimu. <br>
                         Maaf sebesar besar nya, aku khilaf.. jujur perasaanku campur aduk, mulai dari pressure kerjaan dan statement yang kamu ucapkan tempo hari lalu. <br>
-                        Aku gatau mau kemana lagi, yang bisa aku lakukan cuma berusaha mengembalikkan keadaan..
+                        Aku bener bener minta maaf, aku tidak ada niatan sedikit pun untuk melukai perasaan mu, aku sudah berusaha menjelaskan dengan tulus dan jujur <br>
+                        Aku gatau mau kemana lagi, aku bingung, yang bisa aku lakukan cuma berusaha mengembalikkan keadaan..
                     </p>
 
                     <p>Honestly, selama di samping mu, aku selalu bahagia. <br>
@@ -60,8 +61,11 @@
                         Hunting makanan lagi. <br>
                         Dibangunin kamu, diperhatiin kamu.. <br>
                         Jualan kue lagi, open order lagi.. <br>
-                        Aku masih mau jadi tempat kamu cerita dan keluh kesah <br>
                         Akkh aku kangen semua ituuuuu <br>
+                        Aku masih mau jadi tempat kamu cerita dan keluh kesah <br>
+                        Aku juga mau support kamu terus sampai kapanpun <br>
+                        Kita udah liat ikan, nanti kita liat jerapah sama panda <br>
+                        Aku mau keluar kota kok, kita cari makanan enak di sana <br>
                         Jadi aku harap berikan aku kesempatan untuk melakukan itu semua. <br>
                     </p>
 
