--- a/contain.html
+++ b/contain.html
@@ -37,7 +37,9 @@
                     <p>Honestly, selama di samping mu, aku selalu bahagia. <br>
                         Aku bangga punya kamu, aku seneng banget bisa kenal dan ketemu kamu. <br>
                         Kamu itu hebat, pinter, lucu, penyabar.. <br>
-                        Aku gapeduli apa kata orang tentang kamu, pandanganku berbeda, dan aku sangat sangat bersyukur ketemu orang yang bisa menerimaku apa adanya..
+                        Aku gapeduli apa kata orang tentang kamu, <br>
+                        Jika kamu berfikir mempunyai kekurangan, aku ga peduliii, ayo lengkapi <br>
+                        Dan.. aku sangat sangat bersyukur ketemu orang yang bisa menerimaku apa adanya..
                     </p>
 
                     <p>Maka dari itu, izinkanlah aku bisa mengisi hari harimu kembali, izinkan aku untuk berubah menjadi lebih baik lagi bersama dirimu.. <br>
@@ -71,6 +73,7 @@
 
                     <p>Sebentar lagi, aku sudah pindah kantor, kita sudah ga satu tempat,<br>
                     Aku akan menjalani dan berjuang dengan karir yang baru,<br>
+                    Di tempat baru, pasti ada hal yang unik dan hal menarik yang mau kamu dengar bukan ? <br>
                     Aku sangat sangat berterima kasih, karena sudah menemaniku sampai di titik ini. <br>
                     Ayo lanjutkan perjuangan ini bersama, <br>
                     Kita gapai keinginan kita, <br>
