--- a/contain.html
+++ b/contain.html
@@ -63,6 +63,7 @@
                         Hunting makanan lagi. <br>
                         Dibangunin kamu, diperhatiin kamu.. <br>
                         Jualan kue lagi, open order lagi.. <br>
+                        Masih mau main sama bowniee dan summer <br>
                         Akkh aku kangen semua ituuuuu <br>
                         Aku masih mau jadi tempat kamu cerita dan keluh kesah <br>
                         Aku juga mau support kamu terus sampai kapanpun <br>
